# polymine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODOmd  cmake_install.cmake  interpreter  output
codegen-concepts/: expected_output.c  sample_input.poly
sample/: vectors.poly
src/: ast.c  ast.h  io.c  io.h  lexer.c  lexer.h  main.c  parser.c  parser.h  semantics.c  semantics.h  semutil.c  semutil.h  syntax.c  syntax.h  util.c  util.h
src/codegen/: codegen.c  codegen.h
src/common/: ast.c  ast.h  defs.h  util.c  util.h
src/semantics/: semantics.c  semantics.h  semutil.c  semutil.h
src/syntax/: lexer.c  lexer.h  main.c  parser.c  parser.h  syntax.c  syntax.h
